# mygit

./: README.md  how.txt
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
ch5/joinMap/: CMakeLists.txt  joinMap.cpp
ch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
ch6/g2o_curve_fitting/: CMakeLists.txt  main.cpp
ch7/: CMakeLists.txt  extra.cpp  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
